# paxy

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
docs/: conf.py  index.rst
docs/_ext/: commands_autogen.py  paxy_lexer.py
examples/: fib.paxy  printer.paxy  printer_basic.paxy  printer_minimal.paxy
paxy/: __init__.py  assembler.py  basic.py  cli.py  compiler.py  constants.py  funcplace.py  ident.py  ir.py  labels.py  opcoerce.py  parser.py  placeholders.py
paxy/basic/: __init__.py  base.py  callfn.py  compare.py  dec.py  gosub.py  ifjump.py  igl.py  importer.py  inc.py  inop.py  input.py  isbop.py  label.py  let.py  map.py  mapadd.py  mapdel.py  par.py  print.py  returnstmt.py  row.py  sub.py  vec.py
paxy/commands/: __init__.py  base.py  gosub.py  ifjump.py  igl.py  importer.py  inc.py  inop.py  input.py  isbop.py  label.py  let.py  map.py  mapadd.py  mapdel.py  par.py  print.py  returnstmt.py  row.py  vec.py
paxy/commands/core/: __init__.py  compare.py  convert.py  dec.py  gosub.py  ifjump.py  igl.py  importer.py  inc.py  inop.py  inp.py  input.py  isbop.py  label.py  let.py  mad.py  map.py  mapadd.py  mapdel.py  par.py  pnt.py  print.py  returnstmt.py  row.py  vec.py
paxy/compiler/: assembler.py  compile.py  debug.py  ir.py  opcoerce.py  parser.py  twelve.py
stubs/bytecode/: __init__.pyi  instr.pyi
stubs/importlib/: _bootstrap_external.pyi
tests/: helpers.py  test_assembler.py  test_assembler_integration.py  test_basic_callfn.py  test_basic_dec.py  test_basic_gosub.py  test_basic_igl.py  test_basic_import.py  test_basic_input.py  test_basic_label_goto.py  test_basic_let.py  test_basic_map.py  test_basic_mapadd.py  test_basic_mapdel.py  test_basic_ops.py  test_basic_range.py  test_basic_row.py  test_basic_sub.py  test_basic_vec.py  test_cli.py  test_command_convert.py  test_compiler.py  test_example_printers.py  test_fib_par_range.py  test_opcoerce.py  test_parser.py  test_parser_extras.py  test_subroutines.py  test_unquoted_ops.py
vscode-paxy/: language-configuration.json  package.json
vscode-paxy/syntaxes/: paxy.tmLanguage.json
