[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paxy"
version = "0.1.0"
description = "Paxy: a BASIC-like language that compiles to Python bytecode (.pyc)."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
  "bytecode>=0.17.0",  # maintained library for building CodeType
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",       # testing framework
]

[project.scripts]
paxy = "paxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
