[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "paxy"
version = "0.3.0"
description = "Paxy: a modern BASIC-like language that compiles to Python bytecode (.pyc)."
authors = [{ name = "Zeth Green", email = "theology@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
  "bytecode>=0.17.0", # maintained library for building CodeType
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Compilers",
  "Topic :: Education",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/zeth/paxy"
Documentation = "https://github.com/zeth/paxy#readme"
Repository = "https://github.com/zeth/paxy"
Issues = "https://github.com/zeth/paxy/issues"


[project.optional-dependencies]
dev = [
  "pytest>=7.0", # Testing framework
  "sphinx",      # Documentation
  "myst-parser", # Documentation
]

[project.scripts]
paxy = "paxy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paxy*"]
